# pyopp_recap

./: LICENSE  Makefile  README.md  beamerthemecode.sty  environment.yml  presentation.tex
content/: 01_intro.tex  02_packaging_basics.tex  03_code_quality.tex  03_packaging_advanced.tex  04_code_quality.tex  04_testing.tex  05_docs.tex  05_testing.tex  06_ci_and_cd.tex  06_docs.tex  docs.tex  example.tex
headers/: header.tex
pygments_style/: code_style.py  pyproject.toml
pygments_style/code_style/: __init__.py  style.py
