[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code_style"
version = "v1.0.0"

[tool.hatch.build.targets.wheel]
packages = ["code_style.py"]

[project.entry-points."pygments.styles"]
code = "code_style:CodeStyle"
code-light = "code_style:CodeStyleLight"
